<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.nuxeo.ecm.distribution</groupId>
    <artifactId>nuxeo-distribution</artifactId>
    <version>10.3-I20180919_0126</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>nuxeo-jsf-ui-gatling-tests</artifactId>
  <name>Nuxeo JSF UI Gatling Bench</name>
  <description>Gatling bench on Nuxeo JSF UI</description>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.nuxeo.tools.testing</groupId>
        <artifactId>data-test-les-arbres</artifactId>
        <type>zip</type>
        <version>1.1</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>io.gatling.highcharts</groupId>
      <artifactId>gatling-charts-highcharts</artifactId>
    </dependency>
    <dependency>
      <groupId>org.nuxeo.ecm.distribution</groupId>
      <artifactId>nuxeo-server-tomcat</artifactId>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.nuxeo.ecm.distribution</groupId>
      <artifactId>nuxeo-marketplace-jsf-ui</artifactId>
      <type>zip</type>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <sourceDirectory>src/main/scala</sourceDirectory>
    <testSourceDirectory>src/test/scala</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>scala-compile</id>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.gatling</groupId>
        <artifactId>gatling-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>


  <profiles>
    <profile>
      <id>bench</id>
      <build>
        <plugins>
          <plugin>
            <!-- Run all [matching] tests] on mvn integration-test -->
            <groupId>io.gatling</groupId>
            <artifactId>gatling-maven-plugin</artifactId>
            <configuration>
              <overrideGatlingJvmArgs>false</overrideGatlingJvmArgs>
              <jvmArgs>
                <jvmArg>-Xms1g</jvmArg>
                <jvmArg>-Xmx2g</jvmArg>
                <jvmArg>-Xmn400m</jvmArg>
                <jvmArg>-XX:+UseParNewGC</jvmArg>
                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                <jvmArg>-XX:+CMSParallelRemarkEnabled</jvmArg>
                <jvmArg>-XX:+AggressiveOpts</jvmArg>
                <jvmArg>-XX:+OptimizeStringConcat</jvmArg>
                <jvmArg>-XX:+UseThreadPriorities</jvmArg>
                <jvmArg>-XX:ThreadPriorityPolicy=42</jvmArg>
                <!--<jvmArg>-Dcom.sun.management.jmxremote.autodiscovery=true</jvmArg> -->
                <!--<jvmArg>-Dcom.sun.management.jdp.name=gatling</jvmArg> -->
                <!--<jvmArg>-XX:+UnlockCommercialFeatures</jvmArg> -->
                <!--<jvmArg>-XX:+FlightRecorder</jvmArg> -->
              </jvmArgs>
            </configuration>
            <executions>
              <execution>
                <id>setup</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim00Setup</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>massImport</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim10MassImport</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>createFolders</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim10CreateFolders</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>createDocuments</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim20CreateDocuments</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>waitForAsync</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim25WaitForAsync</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>updateDocuments</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim30UpdateDocuments</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>waitForAsync2</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim35WaitForAsync</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>navigation</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim30Navigation</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>search</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim30Search</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>warmup-jsf</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim25WarmUsersJsf</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>navigation-jsf</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim30NavigationJsf</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>bench-mix</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim50Bench</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>bench-crud</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim50CRUD</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>waitForAsync3</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim55WaitForAsync</simulationClass>
                </configuration>
              </execution>
              <execution>
                <id>reindex</id>
                <goals>
                  <goal>integration-test</goal>
                </goals>
                <configuration>
                  <simulationClass>org.nuxeo.cap.bench.Sim80ReindexAll</simulationClass>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
                <configuration>
                  <argLine>-Dlog4j.configuration=${file.uri.prefix}${basedir}/src/main/resources/log4j.xml
                    -Dnuxeo.log.dir=${project.build.directory}
                    -DconnectPassword=${connect.password}
                    ${it.failsafe.argLine}
                  </argLine>
                </configuration>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.nuxeo.build</groupId>
            <artifactId>ant-assembly-maven-plugin</artifactId>
            <configuration>
              <buildFile>${basedir}/itests.xml</buildFile>
            </configuration>
            <executions>
              <execution>
                <id>start-tomcat</id>
                <phase>pre-integration-test</phase>
                <goals>
                  <goal>build</goal>
                </goals>
                <configuration>
                  <targets>
                    <target>prepare-environment</target>
                    <target>copy-packages</target>
                    <target>start</target>
                  </targets>
                </configuration>
              </execution>
              <execution>
                <id>stop-tomcat</id>
                <phase>post-integration-test</phase>
                <goals>
                  <goal>build</goal>
                </goals>
                <configuration>
                  <targets>
                    <target>stop</target>
                  </targets>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>